# slack-mcp-server

./: .gitignore  LICENSE  README.md  ai_search.py  main.py  main_dev.py  pyproject.toml  setup_inspector.sh  slack_bot_setup_guide.md  slack_config.env.example  slack_natural_language_search_proposal.md  slack_troubleshooting_guide.md  start_inspector.sh  test_server.sh
